2006-10-09  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_FilterEditor.py (close): Allow more arguments.

2006-10-09  Don Allingham  <don@gramps-project.org>
	* src/Selectors/_SelectPerson.py: enable toggle button to display all
	* src/glade/gramps.glade: add toggle button
	* src/Editors/_EditPerson.py: add person's name to title
	* src/RelLib/_Name.py: add empty check

2006-10-08  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetAncestralReport.py: fix DAR-Endnotes indent
	* src/plugins/DetDescendantReport.py: fix DDR-Endnotes indent

2006-10-08  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: error message on disk space full
	* src/Bookmarks.py: removed deleted items
	* src/Editors/_EditReference.py: call cancel_and_close on window
	cancel
	* src/DisplayTabs/_SourceRefModel.py: remove debug 
	* src/DisplayTabs/_EmbeddedList.py: remove debug 

2006-10-08  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditPlace.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditPersonRef.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditPerson.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditName.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditMediaRef.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditMedia.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditFamily.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditLdsOrd.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditEventRef.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditEvent.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditChildRef.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditAttribute.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditAddress.py (_create_tabbed_pages): Fix sources.
	* src/RelLib/_Location.py (set_county, get_county): Move into
	LocationBase class.
	* src/RelLib/_LocationBase.py (set_county, get_county): Move from